--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,42 +2,21 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/navigation_home"
-        android:icon="@drawable/ic_search_com"
+        android:icon="@drawable/ic_home"
         android:title="Home" />
 
     <item
         android:id="@+id/navigation_search"
-        android:icon="@drawable/ic_search_com"
-        android:title="Search" />
+        android:icon="@drawable/ic_favorite"
+        android:title="My Favourite" />
 
     <item
         android:id="@+id/navigation_notifications"
-        android:icon="@drawable/ic_search_com"
-        android:title="Notifications" />
+        android:icon="@drawable/ic_cart"
+        android:title="My Cart" />
 
     <item
         android:id="@+id/navigation_profile"
-        android:icon="@drawable/ic_search_com"
-        android:title="Profile" />
+        android:icon="@drawable/ic_setting"
+        android:title="Settings" />
 </menu>
-<!--<menu xmlns:android="http://schemas.android.com/apk/res/android">-->
-<!--    <item-->
-<!--        android:id="@+id/navigation_home"-->
-<!--        android:icon="@drawable/ic_home"-->
-<!--        android:title="Home" />-->
-
-<!--    <item-->
-<!--        android:id="@+id/navigation_search"-->
-<!--        android:icon="@drawable/ic_search"-->
-<!--        android:title="Search" />-->
-
-<!--    <item-->
-<!--        android:id="@+id/navigation_notifications"-->
-<!--        android:icon="@drawable/ic_notifications"-->
-<!--        android:title="Notifications" />-->
-
-<!--    <item-->
-<!--        android:id="@+id/navigation_profile"-->
-<!--        android:icon="@drawable/ic_profile"-->
-<!--        android:title="Profile" />-->
-<!--</menu>-->
