--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="colorPrimary">#648286</color>
-    <color name="colorBG">#EFEFEF</color>
+    <color name="colorBG">#F7F7F7</color>
     <color name="coloritem">#E4E3E3</color>
 
 
