--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -23,9 +23,8 @@
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Hey  "
-            android:drawableEnd="@drawable/animal"
             android:drawablePadding="3dp"
+            android:text="Hii User 1  "
             android:textColor="@color/black"
             android:textSize="16dp" />
 
@@ -81,15 +80,15 @@
                     android:drawableStart="@drawable/ic_search_com"
                     android:drawablePadding="12dp"
                     android:gravity="center_vertical|start"
-                    android:textSize="16dp"
-                    android:text="Search Here"
                     android:paddingHorizontal="14dp"
+                    android:text="Search Here"
                     android:textColor="#B34E4E4E"
-                    app:layout_constraintEnd_toStartOf="@+id/imageView"
+                    android:textSize="16dp"
+                    app:layout_constraintEnd_toStartOf="@+id/img_filter"
                     app:layout_constraintStart_toStartOf="parent" />
 
                 <ImageView
-                    android:id="@+id/imageView"
+                    android:id="@+id/img_filter"
                     android:layout_width="45dp"
                     android:layout_height="45dp"
                     android:background="@drawable/custom_bg_search"
@@ -101,10 +100,8 @@
                     app:layout_constraintTop_toTopOf="parent" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
-
             <TextView
                 android:id="@+id/textView2"
-
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
@@ -376,8 +373,6 @@
 
                         android:textColor="@color/black" />
                 </androidx.appcompat.widget.LinearLayoutCompat>
-
-
             </androidx.appcompat.widget.LinearLayoutCompat>
 
             <TextView
@@ -385,7 +380,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="6dp"
-
                 android:paddingHorizontal="16dp"
                 android:text="Popular Products"
                 android:textColor="@color/black"
@@ -406,3 +400,4 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
+
