--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -5,18 +5,23 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
+    android:background="@color/colorBG"
     tools:context=".ui.main.setting.SettingFragment">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/circleImageView2"
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:src="@drawable/imgtest" />
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="40dp"
+        android:src="@drawable/ic_launcher_foreground"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="32dp"
         android:orientation="vertical"
         app:layout_constraintTop_toBottomOf="@+id/circleImageView2"
         tools:layout_editor_absoluteX="16dp">
@@ -27,8 +32,8 @@
             android:orientation="horizontal">
 
             <de.hdodenhof.circleimageview.CircleImageView
-                android:layout_width="32dp"
-                android:layout_height="32dp"
+                android:layout_width="42dp"
+                android:layout_height="42dp"
                 android:src="@drawable/imgtest" />
 
             <TextView
@@ -45,12 +50,12 @@
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
+            android:layout_marginTop="18dp"
             android:orientation="horizontal">
 
             <ImageView
-                android:layout_width="32dp"
-                android:layout_height="32dp"
+                android:layout_width="36dp"
+                android:layout_height="36dp"
                 android:src="@drawable/ic_loation"
                 android:tint="@color/colorPrimary" />
 
@@ -61,7 +66,7 @@
                 android:layout_marginStart="12dp"
                 android:text="Address Book"
                 android:textColor="@color/black"
-                android:textSize="14dp"
+                android:textSize="16dp"
                 android:textStyle="normal" />
         </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -72,8 +77,8 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:layout_width="32dp"
-                android:layout_height="32dp"
+                android:layout_width="36dp"
+                android:layout_height="36dp"
                 android:padding="3dp"
                 android:src="@drawable/ic_card"
                 android:tint="@color/colorPrimary" />
@@ -85,34 +90,34 @@
                 android:layout_marginStart="12dp"
                 android:text="My Card"
                 android:textColor="@color/black"
-                android:textSize="14dp"
+                android:textSize="16dp"
                 android:textStyle="normal" />
         </androidx.appcompat.widget.LinearLayoutCompat>
 
-<!--        <androidx.appcompat.widget.LinearLayoutCompat-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginTop="12dp"-->
-<!--            android:orientation="horizontal">-->
+        <!--        <androidx.appcompat.widget.LinearLayoutCompat-->
+        <!--            android:layout_width="match_parent"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:layout_marginTop="12dp"-->
+        <!--            android:orientation="horizontal">-->
 
-<!--            <ImageView-->
-<!--                android:layout_width="32dp"-->
-<!--                android:layout_height="32dp"-->
-<!--                android:padding="3dp"-->
+        <!--            <ImageView-->
+        <!--                android:layout_width="32dp"-->
+        <!--                android:layout_height="32dp"-->
+        <!--                android:padding="3dp"-->
 
-<!--                android:src="@drawable/ic_setting"-->
-<!--                android:tint="@color/colorPrimary" />-->
+        <!--                android:src="@drawable/ic_setting"-->
+        <!--                android:tint="@color/colorPrimary" />-->
 
-<!--            <TextView-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_gravity="center_vertical"-->
-<!--                android:layout_marginStart="12dp"-->
-<!--                android:text="Address Book"-->
-<!--                android:textColor="@color/black"-->
-<!--                android:textSize="14dp"-->
-<!--                android:textStyle="normal" />-->
-<!--        </androidx.appcompat.widget.LinearLayoutCompat>-->
+        <!--            <TextView-->
+        <!--                android:layout_width="match_parent"-->
+        <!--                android:layout_height="wrap_content"-->
+        <!--                android:layout_gravity="center_vertical"-->
+        <!--                android:layout_marginStart="12dp"-->
+        <!--                android:text="Address Book"-->
+        <!--                android:textColor="@color/black"-->
+        <!--                android:textSize="16dp"-->
+        <!--                android:textStyle="normal" />-->
+        <!--        </androidx.appcompat.widget.LinearLayoutCompat>-->
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
@@ -121,8 +126,8 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:layout_width="32dp"
-                android:layout_height="32dp"
+                android:layout_width="36dp"
+                android:layout_height="36dp"
                 android:padding="0dp"
 
                 android:src="@drawable/ic_contact"
@@ -135,7 +140,7 @@
                 android:layout_marginStart="12dp"
                 android:text="Contact US"
                 android:textColor="@color/black"
-                android:textSize="14dp"
+                android:textSize="16dp"
                 android:textStyle="normal" />
         </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -146,8 +151,8 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:layout_width="32dp"
-                android:layout_height="32dp"
+                android:layout_width="36dp"
+                android:layout_height="36dp"
                 android:src="@drawable/ic_loation"
                 android:tint="@color/colorPrimary" />
 
@@ -158,7 +163,7 @@
                 android:layout_marginStart="12dp"
                 android:text="Privacy Policy"
                 android:textColor="@color/black"
-                android:textSize="14dp"
+                android:textSize="16dp"
                 android:textStyle="normal" />
         </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -169,8 +174,8 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:layout_width="32dp"
-                android:layout_height="32dp"
+                android:layout_width="36dp"
+                android:layout_height="36dp"
                 android:src="@drawable/ic_loation"
                 android:tint="@color/colorPrimary" />
 
@@ -181,32 +186,32 @@
                 android:layout_marginStart="12dp"
                 android:text="Support FAQs"
                 android:textColor="@color/black"
-                android:textSize="14dp"
+                android:textSize="16dp"
                 android:textStyle="normal" />
         </androidx.appcompat.widget.LinearLayoutCompat>
 
-<!--        <androidx.appcompat.widget.LinearLayoutCompat-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginTop="12dp"-->
-<!--            android:orientation="horizontal">-->
+        <!--        <androidx.appcompat.widget.LinearLayoutCompat-->
+        <!--            android:layout_width="match_parent"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:layout_marginTop="12dp"-->
+        <!--            android:orientation="horizontal">-->
 
-<!--            <ImageView-->
-<!--                android:layout_width="32dp"-->
-<!--                android:layout_height="32dp"-->
-<!--                android:src="@drawable/ic_loation"-->
-<!--                android:tint="@color/colorPrimary" />-->
+        <!--            <ImageView-->
+        <!--                android:layout_width="32dp"-->
+        <!--                android:layout_height="32dp"-->
+        <!--                android:src="@drawable/ic_loation"-->
+        <!--                android:tint="@color/colorPrimary" />-->
 
-<!--            <TextView-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_gravity="center_vertical"-->
-<!--                android:layout_marginStart="12dp"-->
-<!--                android:text="Address Book"-->
-<!--                android:textColor="@color/black"-->
-<!--                android:textSize="14dp"-->
-<!--                android:textStyle="normal" />-->
-<!--        </androidx.appcompat.widget.LinearLayoutCompat>-->
+        <!--            <TextView-->
+        <!--                android:layout_width="match_parent"-->
+        <!--                android:layout_height="wrap_content"-->
+        <!--                android:layout_gravity="center_vertical"-->
+        <!--                android:layout_marginStart="12dp"-->
+        <!--                android:text="Address Book"-->
+        <!--                android:textColor="@color/black"-->
+        <!--                android:textSize="16dp"-->
+        <!--                android:textStyle="normal" />-->
+        <!--        </androidx.appcompat.widget.LinearLayoutCompat>-->
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 
