--- a/app/src/main/res/layout/activity_detail_product.xml
+++ b/app/src/main/res/layout/activity_detail_product.xml
@@ -76,36 +76,47 @@
                 android:padding="16dp">
 
                 <TextView
-                    android:id="@+id/textView5"
-                    android:layout_width="wrap_content"
+                    android:id="@+id/textViewName"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="16dp"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginTop="16dp"
-                    android:text="Stussy T-Shirt"
+                    android:maxLines="1"
                     android:textColor="@color/black"
                     android:textSize="20dp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    app:layout_constraintEnd_toStartOf="@+id/materialCardView"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
-                    android:id="@+id/textView6"
+                    android:id="@+id/textViewBrand"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="3dp"
-                    android:text="$120"
+                    android:textColor="@color/black"
+                    android:textSize="14dp"
+                    app:layout_constraintStart_toStartOf="@+id/textViewName"
+                    app:layout_constraintTop_toBottomOf="@+id/textViewName" />
+
+                <TextView
+                    android:id="@+id/textViewPrice"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="3dp"
                     android:textColor="@color/black"
                     android:textSize="18dp"
                     android:textStyle="bold"
-                    app:layout_constraintStart_toStartOf="@+id/textView5"
-                    app:layout_constraintTop_toBottomOf="@+id/textView5" />
+                    app:layout_constraintStart_toStartOf="@+id/textViewBrand"
+                    app:layout_constraintTop_toBottomOf="@+id/textViewBrand" />
 
                 <com.google.android.material.card.MaterialCardView
+                    android:id="@+id/materialCardView"
                     android:layout_width="120dp"
                     android:layout_height="38dp"
                     android:layout_margin="1dp"
                     android:backgroundTint="@color/transparent"
                     app:cardCornerRadius="10dp"
                     app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
                     app:strokeColor="@color/colorPrimary"
                     app:strokeWidth="1dp">
 
@@ -117,6 +128,8 @@
                         android:weightSum="3">
 
                         <ImageView
+                            android:id="@+id/imageViewMinus"
+
                             android:layout_width="0dp"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
@@ -125,6 +138,7 @@
                             android:tint="@color/colorPrimary" />
 
                         <TextView
+                            android:id="@+id/textViewValue"
                             android:layout_width="0dp"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
@@ -138,7 +152,9 @@
                             app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
                         <ImageView
+                            android:id="@+id/imageViewPlus"
                             android:layout_width="0dp"
+
                             android:layout_height="match_parent"
                             android:layout_weight="1"
                             android:scaleType="centerInside"
@@ -157,21 +173,20 @@
                     android:textColor="@color/black"
                     android:textSize="16dp"
                     android:textStyle="bold"
-                    app:layout_constraintStart_toStartOf="@+id/textView6"
-                    app:layout_constraintTop_toBottomOf="@+id/textView6" />
+                    app:layout_constraintStart_toStartOf="@+id/textViewPrice"
+                    app:layout_constraintTop_toBottomOf="@+id/textViewPrice" />
 
                 <TextView
-                    android:id="@+id/tv_descriptions"
+                    android:id="@+id/textViewDescription"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="6dp"
                     android:layout_marginEnd="1dp"
-                    android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum."
-                    android:textColor="@color/color_neutral02"
-                    android:textSize="12dp"
-                    android:textStyle="normal"
                     android:justificationMode="inter_word"
-
+                    android:textColor="@color/color_neutral02"
+                    android:textSize="14dp"
+                    android:textStyle="normal"
+                    android:lineSpacingExtra="4dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="@+id/textView7"
                     app:layout_constraintTop_toBottomOf="@+id/textView7" />
@@ -186,8 +201,8 @@
                     android:textColor="@color/black"
                     android:textSize="16dp"
                     android:textStyle="bold"
-                    app:layout_constraintStart_toStartOf="@+id/tv_descriptions"
-                    app:layout_constraintTop_toBottomOf="@+id/tv_descriptions" />
+                    app:layout_constraintStart_toStartOf="@+id/textViewDescription"
+                    app:layout_constraintTop_toBottomOf="@+id/textViewDescription" />
 
                 <androidx.appcompat.widget.LinearLayoutCompat
                     android:layout_width="match_parent"
