--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -16,7 +16,7 @@
             android:layout_height="108dp"
             android:layout_marginTop="42dp"
             android:fitsSystemWindows="true"
-            android:src="@drawable/ic_launcher_background"
+            android:src="@mipmap/ic_launcher_foreground"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -57,9 +57,9 @@
             android:backgroundTint="#F4F4F4"
             android:drawableStart="@drawable/ic_user"
             android:drawablePadding="8dp"
-            android:hint="Name"
             android:drawableTint="@color/colorPrimary"
-            android:inputType="textPassword"
+            android:hint="Name"
+            android:inputType="text"
             android:padding="16dp"
             android:textColor="@color/black"
             android:textColorHint="@color/color_neutral04"
@@ -77,7 +77,8 @@
             android:backgroundTint="#F4F4F4"
             android:drawableStart="@drawable/ic_email"
             android:drawablePadding="8dp"
-            android:hint="Email"            android:drawableTint="@color/colorPrimary"
+            android:drawableTint="@color/colorPrimary"
+            android:hint="Email"
 
             android:inputType="textEmailAddress"
             android:padding="16dp"
@@ -87,49 +88,136 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/user_name" />
 
-        <EditText
-            android:id="@+id/password_edittext"
-            android:layout_width="0dp"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/layout_pass"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="16dp"
             android:layout_marginTop="16dp"
             android:background="@drawable/edittext_bg"
             android:backgroundTint="#F4F4F4"
-            android:drawableStart="@drawable/ic_lock"
-            android:drawableEnd="@drawable/ic_eye"
-
-            android:drawablePadding="8dp"
-            android:hint="Password"
-            android:inputType="textPassword"
-            android:padding="16dp"            android:drawableTint="@color/colorPrimary"
-
-
-            android:textColor="@color/black"
-            android:textColorHint="@color/color_neutral04"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/email_edittext" />
 
-        <EditText
-            android:id="@+id/password_confirm"
-            android:layout_width="0dp"
+
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/email_edittext">
+
+            <EditText
+                android:id="@+id/password_edittext"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:background="@drawable/edittext_bg"
+                android:backgroundTint="#F4F4F4"
+                android:drawableStart="@drawable/ic_lock"
+                android:drawablePadding="8dp"
+                android:hint="Password"
+                android:inputType="textPassword"
+                android:padding="16dp"
+                android:textColor="@color/black"
+                android:textColorHint="@color/color_neutral04"
+                app:layout_constraintEnd_toStartOf="@+id/password_eye_icon"
+                app:layout_constraintStart_toStartOf="parent" />
+
+            <ImageView
+                android:id="@+id/password_eye_icon"
+                android:layout_width="50dp"
+                android:layout_height="match_parent"
+                android:tint="@color/colorPrimary"
+                android:src="@drawable/ic_eye"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/layout_pass_cf"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="16dp"
             android:layout_marginTop="16dp"
             android:background="@drawable/edittext_bg"
             android:backgroundTint="#F4F4F4"
-            android:drawableStart="@drawable/ic_lock"
-            android:drawableEnd="@drawable/ic_eye"
-            android:drawablePadding="8dp"
-            android:hint="Confirm Password"
-            android:inputType="textPassword"
-            android:padding="16dp"
-            android:textColor="@color/black"
-            android:textColorHint="@color/color_neutral04"            android:drawableTint="@color/colorPrimary"
-
             app:layout_constraintEnd_toEndOf="parent"
+
+
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/password_edittext" />
+            app:layout_constraintTop_toBottomOf="@+id/layout_pass">
+
+            <EditText
+                android:id="@+id/password_confirm"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:background="@drawable/edittext_bg"
+                android:backgroundTint="#F4F4F4"
+                android:drawableStart="@drawable/ic_lock"
+                android:drawablePadding="8dp"
+                android:hint="Password"
+                android:inputType="textPassword"
+                android:padding="16dp"
+                android:textColor="@color/black"
+                android:textColorHint="@color/color_neutral04"
+                app:layout_constraintEnd_toStartOf="@+id/confirm_password_eye_icon"
+                app:layout_constraintStart_toStartOf="parent" />
+
+            <ImageView
+                android:id="@+id/confirm_password_eye_icon"
+                android:layout_width="50dp"
+                android:layout_height="match_parent"
+                android:tint="@color/colorPrimary"
+                android:src="@drawable/ic_eye"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+<!--        <EditText-->
+<!--            android:id="@+id/password_edittext"-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginHorizontal="16dp"-->
+<!--            android:layout_marginTop="16dp"-->
+<!--            android:background="@drawable/edittext_bg"-->
+<!--            android:backgroundTint="#F4F4F4"-->
+<!--            android:drawableStart="@drawable/ic_lock"-->
+<!--            android:drawableEnd="@drawable/ic_eye"-->
+<!--            android:drawablePadding="8dp"-->
+<!--            android:drawableTint="@color/colorPrimary"-->
+<!--            android:hint="Password"-->
+<!--            android:inputType="textPassword"-->
+<!--            android:padding="16dp"-->
+<!--            android:textColor="@color/black"-->
+<!--            android:textColorHint="@color/color_neutral04"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toBottomOf="@+id/email_edittext" />-->
+
+<!--        <EditText-->
+<!--            android:id="@+id/password_confirm"-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginHorizontal="16dp"-->
+<!--            android:layout_marginTop="16dp"-->
+<!--            android:background="@drawable/edittext_bg"-->
+<!--            android:backgroundTint="#F4F4F4"-->
+<!--            android:drawableStart="@drawable/ic_lock"-->
+<!--            android:drawableEnd="@drawable/ic_eye"-->
+<!--            android:drawablePadding="8dp"-->
+<!--            android:drawableTint="@color/colorPrimary"-->
+<!--            android:hint="Confirm Password"-->
+<!--            android:inputType="textPassword"-->
+<!--            android:padding="16dp"-->
+<!--            android:textColor="@color/black"-->
+<!--            android:textColorHint="@color/color_neutral04"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toBottomOf="@+id/layout_pass" />-->
+
 
         <Button
             android:id="@+id/signup_button"
@@ -143,7 +231,7 @@
             android:textSize="20dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/password_confirm" />
+            app:layout_constraintTop_toBottomOf="@+id/layout_pass_cf" />
 
         <TextView
             android:id="@+id/or_login_with_text"
