--- a/app/src/main/res/layout/activity_detail_product.xml
+++ b/app/src/main/res/layout/activity_detail_product.xml
@@ -55,12 +55,11 @@
             app:strokeWidth="0dp">
 
             <ImageView
-                android:id="@+id/imageView2"
+                android:id="@+id/imageViewProduct"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@color/white"
-                android:scaleType="centerInside"
-                android:src="@drawable/sampleimag" />
+                android:scaleType="centerInside" />
         </com.google.android.material.card.MaterialCardView>
 
         <androidx.core.widget.NestedScrollView
