--- a/app/src/main/res/layout/item_cart.xml
+++ b/app/src/main/res/layout/item_cart.xml
@@ -113,6 +113,7 @@
                     app:layout_constraintEnd_toEndOf="parent">
 
                     <ImageView
+                        android:id="@+id/minus_a_product"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
@@ -136,6 +137,8 @@
                         app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
                     <ImageView
+                        android:id="@+id/add_a_product"
+
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
