--- a/app/src/main/res/layout/item_cart.xml
+++ b/app/src/main/res/layout/item_cart.xml
@@ -66,12 +66,14 @@
 
                 <TextView
                     android:id="@+id/cart_item_title"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:paddingStart="12dp"
+                    android:singleLine="true"
                     android:text="Stussy T-Shirt"
                     android:textColor="@android:color/black"
                     android:textSize="18dp"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/cardLocation"
                     app:layout_constraintTop_toTopOf="@+id/cardLocation" />
 
