--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -114,7 +114,7 @@
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:id="@+id/layout_mycart"
-
+android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
